--- a/packages/SystemUI/res/values/kang_dimens.xml
+++ b/packages/SystemUI/res/values/kang_dimens.xml
@@ -20,7 +20,11 @@
     <dimen name="qs_ribbon_width_big">64dp</dimen>
     <dimen name="qs_ribbon_height_small">40dp</dimen>
     <dimen name="qs_ribbon_height_big">64dp</dimen>
+
     <!-- Quick Settings tile geometry: interior margin, above and below icon (ribbon mode) -->
     <dimen name="qs_tile_ribbon_icon_margin_small">4dp</dimen>
     <dimen name="qs_tile_ribbon_icon_margin_big">16dp</dimen>
+
+    <!-- Network stats text size -->
+    <dimen name="network_stats_text_size">10dp</dimen>
 </resources>
