Development shortcut in StatusBar and Recent Panel
It enables the wipe data and application force close option in the
recent tasks list and in the notification area. These options will
be available only if the Development shortcut option is enabled.

Change-Id: Ia4e1d040e8eade5afe118dd62bc28c86381c03e6

Conflicts:
	packages/SystemUI/src/com/android/systemui/statusbar/BaseStatusBar.java

Conflicts:
	packages/SystemUI/res/menu/recent_popup_menu.xml
	packages/SystemUI/res/values/kang_strings.xml
	packages/SystemUI/src/com/android/systemui/recent/RecentsPanelView.java

--- a/packages/SystemUI/res/values/kang_strings.xml
+++ b/packages/SystemUI/res/values/kang_strings.xml
@@ -23,4 +23,7 @@
     <!-- Active Display -->
     <string name="active_display_privacy_content">Content message not showing because privacy mode enabled</string>
 
+    <!-- Development shortcut -->
+    <string name="advanced_dev_option_wipe_app">Wipe app data</string>
+    <string name="advanced_dev_option_force_stop">Force stop</string>
 </resources>
