--- a/packages/SystemUI/res/values/kang_strings.xml
+++ b/packages/SystemUI/res/values/kang_strings.xml
@@ -19,4 +19,8 @@
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <!-- Notifications: Allow hiding notification icons -->
     <string name="status_bar_notification_hide_icon_packages">Hide app\'s notification icon(s)</string>
+
+    <!-- Active Display -->
+    <string name="active_display_privacy_content">Content message not showing because privacy mode enabled</string>
+
 </resources>
