--- a/packages/SystemUI/res/values/kang_styles.xml
+++ b/packages/SystemUI/res/values/kang_styles.xml
@@ -31,4 +31,9 @@
         <item name="android:background">@android:color/transparent</item>
     </style>
 
+    <style name="TextAppearance.StatusBar.Time" parent="@*android:style/TextAppearance.StatusBar">
+        <item name="android:textSize">@dimen/notification_subtext_size</item>
+        <item name="android:textColor">#999999</item>
+    </style>
+
 </resources>
