--- a/packages/SystemUI/res/values/colors.xml
+++ b/packages/SystemUI/res/values/colors.xml
@@ -74,6 +74,7 @@
     <color name="card_backgroundExpand">#ffffffff</color>
 
     <color name="card_text_color_header">#ff000000</color>
+    <color name="ad_notification_background_color">#3fff</color>
 
     <!-- Used by selector -->
     <color name="card_pressed">#7e3c3c3c</color>
