--- a/packages/DocumentsUI/res/values-holodark/colors.xml
+++ b/packages/DocumentsUI/res/values-holodark/colors.xml
@@ -24,7 +24,7 @@
     <color name="bg2">#222</color>
     <color name="bg3">#333</color>
 
-    <!-- Network stats -->
+    <!-- Network stats
     <style name="TextAppearance.StatusBar.NetworkStats"
            parent="@*android:style/TextAppearance.StatusBar">
         <item name="android:layout_width">wrap_content</item>
@@ -34,5 +34,6 @@
         <item name="android:textSize">@dimen/network_stats_text_size</item>
         <item name="android:textColor">#ffffff</item>
     </style>
+    -->
 
 </resources>
